feat:configuração da rota de autenticação por token
